MG5_aMC_v2_9_23/bin/MG5_debug
#************************************************************
#*                     MadGraph5_aMC@NLO                    *
#*                                                          *
#*                *                       *                 *
#*                  *        * *        *                   *
#*                    * * * * 5 * * * *                     *
#*                  *        * *        *                   *
#*                *                       *                 *
#*                                                          *
#*                                                          *
#*         VERSION 2.9.23                2025-03-14         *
#*                                                          *
#*    The MadGraph5_aMC@NLO Development Team - Find us at   *
#*    https://server06.fynu.ucl.ac.be/projects/madgraph     *
#*                                                          *
#************************************************************
#*                                                          *
#*               Command File for MadGraph5_aMC@NLO         *
#*                                                          *
#*     run as ./bin/mg5_aMC  filename                       *
#*                                                          *
#************************************************************
set group_subprocesses Auto
set ignore_six_quark_processes False
set low_mem_multicore_nlo_generation False
set complex_mass_scheme False
set gauge unitary
set loop_optimized_output True
set loop_color_flows False
set max_npoint_for_channel 0
set default_unset_couplings 99
set max_t_for_channel 99
set zerowidth_tchannel True
import model sm
define p = g u c d s u~ c~ d~ s~
define j = g u c d s u~ c~ d~ s~
define l+ = e+ mu+
define l- = e- mu-
define vl = ve vm vt
define vl~ = ve~ vm~ vt~
import model model ../../code/ExtraTermLagrangian/HiggsPortal_UFO/
import model model ../../code/ExtraTermLagrangian/HiggsPortal_UFO/
import model model ../../code/ExtraTermLagrangian/HiggsPortal_UFO/
Traceback (most recent call last):
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/models/__init__.py", line 100, in load_model
    __import__(path_split[-1])
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/bin/../../code/ExtraTermLagrangian/HiggsPortal_UFO/__init__.py", line 6, in <module>
    import vertices
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/bin/../../code/ExtraTermLagrangian/HiggsPortal_UFO/vertices.py", line 223
    particles = [ P.<>CreateObjectParticleName[PartNameMG[Phibar]], P.<>CreateObjectParticleName[PartNameMG[Phi]], P.P__tilde__sc, P.P__tilde__sc ],
                    ^^
SyntaxError: invalid syntax

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/madgraph_interface.py", line 5514, in do_import
    self._curr_model = import_ufo.import_model(args[1], prefix=prefix,
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/models/import_ufo.py", line 251, in import_model
    model = import_full_model(model_path, decay, prefix)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/models/import_ufo.py", line 407, in import_full_model
    ufo_model = ufomodels.load_model(model_path, decay)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/models/__init__.py", line 102, in load_model
    raise UFOError(str(error))
models.UFOError: invalid syntax (vertices.py, line 223)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/madgraph_interface.py", line 5528, in do_import
    self.exec_cmd('import %s' % line, errorhandling=False, printcmd=True, precmd=False, postcmd=False)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/extended_cmd.py", line 1570, in exec_cmd
    stop = Cmd.onecmd_orig(current_interface, line, **opt)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/extended_cmd.py", line 1490, in onecmd_orig
    return func(arg, **opt)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/master_interface.py", line 281, in do_import
    self.cmd.do_import(self, *args, **opts)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/madgraph_interface.py", line 5532, in do_import
    raise self.InvalidCmd('UFO model not python3 compatible. You can convert it via the command \nconvert model %s\nYou can also type \"set auto_convert_model T\" to automatically convert all python2 module to be python3 compatible in the future.' % model_path)
madgraph.InvalidCmd: UFO model not python3 compatible. You can convert it via the command 
convert model ../../code/ExtraTermLagrangian/HiggsPortal_UFO/
You can also type "set auto_convert_model T" to automatically convert all python2 module to be python3 compatible in the future.

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/extended_cmd.py", line 1541, in onecmd
    return self.onecmd_orig(line, **opt)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/extended_cmd.py", line 1490, in onecmd_orig
    return func(arg, **opt)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/master_interface.py", line 281, in do_import
    self.cmd.do_import(self, *args, **opts)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/madgraph_interface.py", line 5530, in do_import
    raise err
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/madgraph/interface/madgraph_interface.py", line 5514, in do_import
    self._curr_model = import_ufo.import_model(args[1], prefix=prefix,
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/models/import_ufo.py", line 251, in import_model
    model = import_full_model(model_path, decay, prefix)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/models/import_ufo.py", line 407, in import_full_model
    ufo_model = ufomodels.load_model(model_path, decay)
  File "/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/models/__init__.py", line 102, in load_model
    raise UFOError(str(error))
models.UFOError: invalid syntax (vertices.py, line 223)
                          MadGraph5_aMC@NLO Options    
                          ----------------    
        complex_mass_scheme 	:	False
    default_unset_couplings 	:	99
                      gauge 	:	unitary
         group_subprocesses 	:	Auto
  ignore_six_quark_processes 	:	False
           loop_color_flows 	:	False
      loop_optimized_output 	:	True
  low_mem_multicore_nlo_generation 	:	False
     max_npoint_for_channel 	:	0
          max_t_for_channel 	:	99
               stdout_level 	:	20 (user set)
         zerowidth_tchannel 	:	True

                         MadEvent Options    
                          ----------------    
     automatic_html_opening 	:	True
                    nb_core 	:	None
        notification_center 	:	True
                   run_mode 	:	2

                      Configuration Options    
                      ---------------------    
                        OLP 	:	MadLoop
                    amcfast 	:	amcfast-config
                   applgrid 	:	applgrid-config
         auto_convert_model 	:	True (user set)
                auto_update 	:	7
         cluster_local_path 	:	None
           cluster_nb_retry 	:	1
              cluster_queue 	:	None (user set)
         cluster_retry_wait 	:	300
               cluster_size 	:	100
      cluster_status_update 	:	(600, 30)
          cluster_temp_path 	:	None
               cluster_type 	:	condor
                    collier 	:	./HEPTools/lib
               cpp_compiler 	:	None
             crash_on_error 	:	False
               delphes_path 	:	./Delphes
                 eps_viewer 	:	None
        exrootanalysis_path 	:	./ExRootAnalysis
              f2py_compiler 	:	None
          f2py_compiler_py2 	:	None
          f2py_compiler_py3 	:	None
                    fastjet 	:	None (user set)
           fortran_compiler 	:	None
                      golem 	:	None (user set)
                 hepmc_path 	:	None (user set)
                  hwpp_path 	:	None (user set)
                     lhapdf 	:	/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/HEPTools/lhapdf6_py3/bin/lhapdf-config (user set)
                 lhapdf_py2 	:	None
                 lhapdf_py3 	:	/Users/juandiegoharo/Documents/ProyectoAE/MG5_aMC_v2_9_23/HEPTools/lhapdf6_py3/bin/lhapdf-config (user set)
          madanalysis5_path 	:	None (user set)
           madanalysis_path 	:	./MadAnalysis
  mg5amc_py8_interface_path 	:	None (user set)
                      ninja 	:	./HEPTools/lib
        output_dependencies 	:	external
            pythia-pgs_path 	:	./pythia-pgs
               pythia8_path 	:	None (user set)
                    samurai 	:	None
               syscalc_path 	:	./SysCalc
                    td_path 	:	./td
                text_editor 	:	None
                thepeg_path 	:	None (user set)
                    timeout 	:	60
                web_browser 	:	None
